syntax = "proto3";

package raftpb;

// Example RequestVote RPC arguments structure.
message RequestVoteArgs {
    uint64 peer_id = 1;
    uint64 term = 2;
    uint64 last_log_index = 3;
    uint64 last_log_term = 4;
    // Your data here (2A, 2B).
}

// Example RequestVote RPC reply structure.
message RequestVoteReply {
    uint64 term = 1;
    bool vote_granted = 2;
    uint64 peer_id = 3;
    // Your data here (2A).
}
